--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Home</h2>
         <p>Welcome to my portfolio. I am a web developer.</p>
         <p>My name is John Doe.</p> 
-        <img src="profilePic.JPG" alt="Profile Comic" class="profilePic">
+        <img src="ProfilePic.JPG" alt="Profile Comic" class="profilePic">
     </section>
     <section id="about">
         <h2>About</h2>
